--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 header .box {
   height: 80px;
-  background-color: gray;
+  background-color: #24292e;;
   display: flex;
   justify-content: space-between;
   text-align: center;
@@ -27,14 +27,18 @@ header h1 {
   font-size: 50px;
 }
 
-.container {
+.back {
   background-color: black;
+}
+
+.container {
   min-height: calc(100vh - 80px);
-  max-width: 100vw;
-  padding: 25px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  max-width: 90vw;
+  padding: 25px 5px 25px 20px;
+  /* display: flex;
+  flex-wrap: wrap; */
+  margin: 0 auto;
+  /* justify-content: center; */
 }
 
 .b {
@@ -71,11 +75,12 @@ header h1 {
   height: 278px;
   width: 185px;
   background-color: rgba(5, 5, 5, 0.9);
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
-.flag {
+.flag img{
   height: 20px;
-  width: 20px;
-  display: flex;
+  width: 22px;
+  margin-bottom: -5px;
 }
